--- a/doc.html
+++ b/doc.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="favicon.png">
   <title>Tingle - 为移动而生的 React 组件集</title>
-  <link rel="stylesheet" href="page-home.css">
+  <link rel="stylesheet" href="page-doc.css">
   <!-- HTML5 shim for IE8 support of HTML5 elements -->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
