--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="favicon.png">
   <title>Tingle - 为移动而生的 React 组件集</title>
   <link rel="stylesheet" href="lib/iconfont/iconfont.css">
   <link rel="stylesheet" href="page-home.css">
